新增facade模块；datasource区分是否在Android环境下
新增facade模块；
datasource区分是否在Android环境下；
内存指标增加获取本进程堆内存数据；
Android环境下的默认流畅度采集方案替换为采集本进程流畅度数据的方案；

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':util', ':log', ':monitor', ':datasource'
+include ':app', ':util', ':log', ':monitor', ':datasource', ':facade', ':datasourceOutOfAndroid'
