--- a/facade/build.gradle
+++ b/facade/build.gradle
@@ -5,11 +5,10 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        minSdkVersion 18
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -23,7 +22,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    testCompile 'org.mockito:mockito-core:1.9.5'
+    releaseProvided 'org.mockito:mockito-core:1.9.5'
+    debugCompile 'org.mockito:mockito-core:1.9.5'
     // new is 23.3.0
     androidTestCompile 'com.android.support.test:runner:0.5'
     // Set this dependency to use JUnit 4 rules
@@ -35,4 +35,5 @@ dependencies {
     compile project(':monitor')
     compile project(':util')
     compile project(':log')
+    compile project(':datasource')
 }
