--- a/facade/build.gradle
+++ b/facade/build.gradle
@@ -21,19 +21,16 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    releaseProvided 'org.mockito:mockito-core:1.9.5'
-    debugCompile 'org.mockito:mockito-core:1.9.5'
-    // new is 23.3.0
+    compile 'com.android.support:appcompat-v7:23.4.0' // new is 23.4.0
+    testCompile 'org.mockito:mockito-core:1.9.5'
+
     androidTestCompile 'com.android.support.test:runner:0.5'
     // Set this dependency to use JUnit 4 rules
     androidTestCompile 'com.android.support.test:rules:0.5'
     // Set this dependency to build and run Espresso tests
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    // Set this dependency to build and run UI Automator tests
-    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+
     compile project(':monitor')
     compile project(':util')
-    compile project(':log')
     compile project(':datasource')
 }
