monitor模块不依赖于Android包，并准备上jcenter

--- a/monitor/gradle.properties
+++ b/monitor/gradle.properties
@@ -16,20 +16,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-PROJ_GROUP=com.tencent.wstt.gt
-
-PROJ_VERSION=0.0.6
-PROJ_VERSION_CODE=6
-
-PROJ_WEBSITEURL=https://github.com/r551/GTTools
-PROJ_ISSUETRACKERURL=https://github.com/r551/GTTools/issues
-PROJ_VCSURL=https://github.com/r551/GTTools.git
-PROJ_DESCRIPTION=GTTools android studio
-
-PROJ_LICENCE_NAME=The MIT License (MIT)
-PROJ_LICENCE_URL=https://opensource.org/licenses/mit-license.php
-PROJ_LICENCE_DEST=repo
-
-DEVELOPER_ID=r551
-DEVELOPER_NAME=yoyoqin
-DEVELOPER_EMAIL=18660226@qq.com
+PROJ_NAME=monitor
+PROJ_ARTIFACTID=monitor
+PROJ_POM_NAME=monitor Jar Repository
