--- a/monitor/build.gradle
+++ b/monitor/build.gradle
@@ -1,27 +1,19 @@
-apply plugin: 'com.android.library'
-
-android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
-
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-}
+apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.9.5'
-    compile 'com.android.support:appcompat-v7:23.4.0' // new is 23.4.0
 }
+
+// Android和Java编译都要指定编码，默认是GBK
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
+// Javadoc也需要指定编码
+tasks.withType(org.gradle.api.tasks.javadoc.Javadoc) {
+    options.encoding = "UTF-8"
+}
+
+apply from:'./bintray.gradle'
