对dataSource模块增加上jcenter的构建脚本

--- a/datasource/build.gradle
+++ b/datasource/build.gradle
@@ -30,3 +30,14 @@ dependencies {
 
     compile project(':monitor')
 }
+
+// Android和Java编译都要指定编码，默认是GBK
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
+tasks.withType(org.gradle.api.tasks.javadoc.Javadoc) {
+    options.encoding = "UTF-8"
+}
+
+apply from:'./bintray.gradle'
