--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,8 @@
 # org.gradle.parallel=true
 PROJ_GROUP=com.tencent.wstt.gt
 
-PROJ_VERSION=0.0.6
-PROJ_VERSION_CODE=6
+PROJ_VERSION=1.0.1
+PROJ_VERSION_CODE=100001
 
 PROJ_WEBSITEURL=https://github.com/r551/GTTools
 PROJ_ISSUETRACKERURL=https://github.com/r551/GTTools/issues
